testdata/baselines/reference/submodule/conformance/genericCallWithObjectTypeArgsAndInitializers.errors.txt
genericCallWithObjectTypeArgsAndInitializers.ts(3,17): error TS2322: Type 'null' is not assignable to type 'T'.
genericCallWithObjectTypeArgsAndInitializers.ts(4,18): error TS2322: Type 'undefined' is not assignable to type 'T'.
genericCallWithObjectTypeArgsAndInitializers.ts(5,33): error TS2322: Type 'number' is not assignable to type 'T'.
genericCallWithObjectTypeArgsAndInitializers.ts(6,37): error TS2322: Type 'T' is not assignable to type 'U'.
genericCallWithObjectTypeArgsAndInitializers.ts(8,56): error TS2322: Type 'U' is not assignable to type 'V'.


==== genericCallWithObjectTypeArgsAndInitializers.ts (5 errors) ====
    // Generic typed parameters with initializers
    
    function foo<T>(x: T = null) { return x; } // ok
                    ~~~~~~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T'.
    function foo2<T>(x: T = undefined) { return x; } // ok
                     ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
    function foo3<T extends Number>(x: T = 1) { } // error
                                    ~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'T'.
    function foo4<T, U extends T>(x: T, y: U = x) { } // error
                                        ~~~~~~~~
!!! error TS2322: Type 'T' is not assignable to type 'U'.
!!! related TS2208 genericCallWithObjectTypeArgsAndInitializers.ts:6:15: This type parameter might need an `extends U` constraint.
    function foo5<T, U extends T>(x: U, y: T = x) { } // ok
    function foo6<T, U extends T, V extends U>(x: T, y: U, z: V = y) { } // error
                                                           ~~~~~~~~
!!! error TS2322: Type 'U' is not assignable to type 'V'.
    function foo7<T, U extends T, V extends U>(x: V, y: U = x) { } // should be ok